connect/tests/macros/quint_run/fail/invalid_str.stderr
error: expected string literal
 --> tests/macros/quint_run/fail/invalid_str.rs:7:39
  |
7 | #[quint_run(spec = "spec.qnt", main = 666)]
  |                                       ^^^
